--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,8 @@
     "express": "^4.16.4"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "mysql": "^2.16.0"
   }
 }
