--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "mysql-singleton": "^1.0.5"
   }
 }
