--- a/app/client/package.json
+++ b/app/client/package.json
@@ -25,5 +25,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@material-ui/icons": "^3.0.2",
+    "axios": "^0.18.0"
+  }
 }
