--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "devDependencies": {
     "express": "^4.16.4",
-    "nodemon": "^1.18.10"
+    "express-session": "^1.15.6",
+    "nodemon": "^1.18.10",
+    "passport": "^0.4.0"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
