--- a/app/package.json
+++ b/app/package.json
@@ -11,15 +11,17 @@
   "devDependencies": {
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^1.18.10",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^7.0.0",
-    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
     "mysql-singleton": "^1.0.5",
